[tool.poetry]
name = "rate-my-digs-leeds"
version = "0.1.0"
description = ""
authors = ["christophercarlon <cmcarleone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
loguru = "^0.7.2"
duckdb = "0.9.2"
geopandas = "^0.14.3"
watchdog = "^4.0.0"
streamlit = "^1.31.1"
folium = "^0.15.1"
streamlit-folium = "^0.18.0"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.1"
ruff = "^0.2.1"
h3 = "^3.7.6"
osmnx = "^1.9.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
